@startuml

class Compra{
    - id: Long
    - totalCompra: Double
}

class ItemCompra{
    - id: Long
    - quantidade: Integer
    - preco: Double
}

class Pagamento{
    - id: Long
    - valor: String
}

class Boleto{
    - id: Long
    - dataVencimento: Date
    - dataPagamento: Date
}

class Cartao{
    - id: Long
    - nomeTitular: String
    - numeroCartao: String
    - dataValidade: String
}

class Pix{
    - id: long
    - chavePix: String
}

class Usuario{
    - id: Long
    - nome: String
    - email: String
    - senha: String
    - cpf: String
}

class Telefone{
    - id: Long
    - codigoArea: String
    - numero: String
}

enum Sexo{
    - MASCULINO: int
    - FEMININO: int
}

class Brinquedo{
    - id: Long
    - marca: String
    - idade: String
}

class Produto{
    - id: Long
    - nome: String
    - descricao: String
    - preco: Double
    - estoque: Integer
}

class Loja{
    - id: Long
    - nome: String
    - cnpj: String
}

class Endereco{
    - id: Long
    - principal: Boolean
    - logradouro: String
    - bairro: String
    - numero: String
    - complemento: String
    - cep: String
}

class Estado{
    - id: Long
    - nome: String
    - sigla: String
}

class Cidade{
    - id: Long
    - nome: String
}

Usuario "*" --> "1" Produto : listaDesejo
Usuario "1" *--> "*" Endereco
Usuario "1" *--> "1" Telefone
Usuario "*" --> "1" Loja
Usuario "1" --> "1" Pagamento
Usuario "1" *--> "1" Sexo

Compra "*" --> "1" Endereco
Compra "1" *--> "1" Pagamento
Compra "1" *--> "*" ItemCompra

ItemCompra "*" --> "1" Brinquedo

Cidade "*" --> "1" Estado

Loja "1" --> "*" Produto

Endereco "*" --> "1" Cidade

Brinquedo --|> Produto
Pix --|> Pagamento
Cartao --|> Pagamento
Boleto --|> Pagamento

@enduml